[package]
name = "sweep-plugin"
version = "0.1.0"
authors = ["dgabriele"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.23.0"
reqwest = { version = "0.10", features = ["blocking", "native-tls", "rustls-tls", "json"] }
